DuPont DevSB/src/objects/pse__Hours_to_Days_Rule__c.object
<CustomObject>
    <customHelpPage>pse__HoursToDaysRuleHelp</customHelpPage>
    <description>If using daily billing rates, determines how many hours count as a day or any specified partial day amount in billing or cost calculations. You can apply an hours to days rule to a project and an assignment using the Hours to Days  field.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Days_Value_10__c</fullName>
        <description>Number of days to apply for hours less than Hour Threshold 10</description>
        <inlineHelpText>Number of days to apply for hours less than Hour Threshold 10</inlineHelpText>
        <label>Days Value 10</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Days_Value_11__c</fullName>
        <description>Number of days to apply for hours less than Hour Threshold 11</description>
        <inlineHelpText>Number of days to apply for hours less than Hour Threshold 11</inlineHelpText>
        <label>Days Value 11</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Days_Value_12__c</fullName>
        <description>Number of days to apply for hours less than Hour Threshold 12</description>
        <inlineHelpText>Number of days to apply for hours less than Hour Threshold 12</inlineHelpText>
        <label>Days Value 12</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hour_Threshold_10__c</fullName>
        <description>if non-null, any number of hours less than or equal to this gets Days Value 10.</description>
        <inlineHelpText>if non-null, any number of hours less than or equal to this gets Days Value 10.</inlineHelpText>
        <label>Hour Threshold 10</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hour_Threshold_11__c</fullName>
        <description>if non-null, any number of hours less than or equal to this gets Days Value 11.</description>
        <inlineHelpText>if non-null, any number of hours less than or equal to this gets Days Value 11.</inlineHelpText>
        <label>Hour Threshold 11</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hour_Threshold_12__c</fullName>
        <description>if non-null, any number of hours less than or equal to this gets Days Value 12.</description>
        <inlineHelpText>if non-null, any number of hours less than or equal to this gets Days Value 12.</inlineHelpText>
        <label>Hour Threshold 12</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This rule will be used if no rule is specified on Project or Assignment.</description>
        <inlineHelpText>This rule will be used if no rule is specified on Project or Assignment.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Maximum_Days_Value__c</fullName>
        <description>any number of hours greater than the highest non-null Hour Threshold field value gets this Days value (if all thresholds are null, then this value applies regardless of number of hours).</description>
        <label>Maximum Days Value</label>
        <precision>8</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Hours to Days Rule</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Is_Default__c</columns>
        <columns>pse__Maximum_Days_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hours to Days Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hours to Days Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Day_Value_Required_for_Hour_Threshold</fullName>
        <active>true</active>
        <description>Day Values are required if hour thresholds are specified</description>
        <errorConditionFormula>OR
(
AND(ISNULL(pse__Days_Value_1__c),NOT(ISNULL(pse__Hour_Threshold_1__c))),
AND(ISNULL(pse__Days_Value_2__c),NOT(ISNULL(pse__Hour_Threshold_2__c))),
AND(ISNULL(pse__Days_Value_3__c),NOT(ISNULL(pse__Hour_Threshold_3__c))),
AND(ISNULL(pse__Days_Value_4__c),NOT(ISNULL(pse__Hour_Threshold_4__c))),
AND(ISNULL(pse__Days_Value_5__c),NOT(ISNULL(pse__Hour_Threshold_5__c))),
AND(ISNULL(pse__Days_Value_6__c),NOT(ISNULL(pse__Hour_Threshold_6__c))),
AND(ISNULL(pse__Days_Value_7__c),NOT(ISNULL(pse__Hour_Threshold_7__c))),
AND(ISNULL(pse__Days_Value_8__c),NOT(ISNULL(pse__Hour_Threshold_8__c))),
AND(ISNULL(pse__Days_Value_9__c),NOT(ISNULL(pse__Hour_Threshold_9__c))),
AND(ISNULL(pse__Days_Value_10__c),NOT(ISNULL(pse__Hour_Threshold_10__c))),
AND(ISNULL(pse__Days_Value_11__c),NOT(ISNULL(pse__Hour_Threshold_11__c))),
AND(ISNULL(pse__Days_Value_12__c),NOT(ISNULL(pse__Hour_Threshold_12__c))),
AND(ISNULL(pse__Days_Value_13__c),NOT(ISNULL(pse__Hour_Threshold_13__c))),
AND(ISNULL(pse__Days_Value_14__c),NOT(ISNULL(pse__Hour_Threshold_14__c))),
AND(ISNULL(pse__Days_Value_15__c),NOT(ISNULL(pse__Hour_Threshold_15__c))),
AND(ISNULL(pse__Days_Value_16__c),NOT(ISNULL(pse__Hour_Threshold_16__c))),
AND(ISNULL(pse__Days_Value_17__c),NOT(ISNULL(pse__Hour_Threshold_17__c))),
AND(ISNULL(pse__Days_Value_18__c),NOT(ISNULL(pse__Hour_Threshold_18__c))),
AND(ISNULL(pse__Days_Value_19__c),NOT(ISNULL(pse__Hour_Threshold_19__c))),
AND(ISNULL(pse__Days_Value_20__c),NOT(ISNULL(pse__Hour_Threshold_20__c)))
)</errorConditionFormula>
        <errorMessage>Days Values required if the corresponding Hour Threshold is specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Force_Increasing_Hour_Thresholds</fullName>
        <active>true</active>
        <description>Checks to ensure hour thresholds are in increasing value</description>
        <errorConditionFormula>NOT(AND(
OR(ISNULL(pse__Hour_Threshold_2__c ), pse__Hour_Threshold_2__c &gt; pse__Hour_Threshold_1__c),
OR(ISNULL(pse__Hour_Threshold_3__c ), pse__Hour_Threshold_3__c &gt; pse__Hour_Threshold_2__c),
OR(ISNULL(pse__Hour_Threshold_4__c ), pse__Hour_Threshold_4__c &gt; pse__Hour_Threshold_3__c),
OR(ISNULL(pse__Hour_Threshold_5__c ), pse__Hour_Threshold_5__c &gt; pse__Hour_Threshold_4__c),
OR(ISNULL(pse__Hour_Threshold_6__c ), pse__Hour_Threshold_6__c &gt; pse__Hour_Threshold_5__c),
OR(ISNULL(pse__Hour_Threshold_7__c ), pse__Hour_Threshold_7__c &gt; pse__Hour_Threshold_6__c),
OR(ISNULL(pse__Hour_Threshold_8__c ), pse__Hour_Threshold_8__c &gt; pse__Hour_Threshold_7__c),
OR(ISNULL(pse__Hour_Threshold_9__c ), pse__Hour_Threshold_9__c &gt; pse__Hour_Threshold_8__c),
OR(ISNULL(pse__Hour_Threshold_10__c ), pse__Hour_Threshold_10__c &gt; pse__Hour_Threshold_9__c),
OR(ISNULL(pse__Hour_Threshold_11__c ), pse__Hour_Threshold_11__c &gt; pse__Hour_Threshold_10__c),
OR(ISNULL(pse__Hour_Threshold_12__c ), pse__Hour_Threshold_12__c &gt; pse__Hour_Threshold_11__c),
OR(ISNULL(pse__Hour_Threshold_13__c ), pse__Hour_Threshold_13__c &gt; pse__Hour_Threshold_12__c),
OR(ISNULL(pse__Hour_Threshold_14__c ), pse__Hour_Threshold_14__c &gt; pse__Hour_Threshold_13__c),
OR(ISNULL(pse__Hour_Threshold_15__c ), pse__Hour_Threshold_15__c &gt; pse__Hour_Threshold_14__c),
OR(ISNULL(pse__Hour_Threshold_16__c ), pse__Hour_Threshold_16__c &gt; pse__Hour_Threshold_15__c),
 OR(ISNULL(pse__Hour_Threshold_17__c ), pse__Hour_Threshold_17__c &gt; pse__Hour_Threshold_16__c),
 OR(ISNULL(pse__Hour_Threshold_18__c ), pse__Hour_Threshold_18__c &gt; pse__Hour_Threshold_17__c),
 OR(ISNULL(pse__Hour_Threshold_19__c ), pse__Hour_Threshold_19__c &gt; pse__Hour_Threshold_18__c),
 OR(ISNULL(pse__Hour_Threshold_20__c ), pse__Hour_Threshold_20__c &gt; pse__Hour_Threshold_19__c)
))</errorConditionFormula>
        <errorMessage>Hour Thresholds must be in increasing order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Hour_Threshold_Required_for_Days_Value</fullName>
        <active>true</active>
        <description>Hour Threshold is required if Days Value is specified.</description>
        <errorConditionFormula>OR
(
AND(NOT(ISNULL(pse__Days_Value_1__c)),ISNULL(pse__Hour_Threshold_1__c)),
AND(NOT(ISNULL(pse__Days_Value_2__c)),ISNULL(pse__Hour_Threshold_2__c)),
AND(NOT(ISNULL(pse__Days_Value_3__c)),ISNULL(pse__Hour_Threshold_3__c)),
AND(NOT(ISNULL(pse__Days_Value_4__c)),ISNULL(pse__Hour_Threshold_4__c)),
AND(NOT(ISNULL(pse__Days_Value_5__c)),ISNULL(pse__Hour_Threshold_5__c)),
AND(NOT(ISNULL(pse__Days_Value_6__c)),ISNULL(pse__Hour_Threshold_6__c)),
AND(NOT(ISNULL(pse__Days_Value_7__c)),ISNULL(pse__Hour_Threshold_7__c)),
AND(NOT(ISNULL(pse__Days_Value_8__c)),ISNULL(pse__Hour_Threshold_8__c)),
AND(NOT(ISNULL(pse__Days_Value_9__c)),ISNULL(pse__Hour_Threshold_9__c)),
AND(NOT(ISNULL(pse__Days_Value_10__c)),ISNULL(pse__Hour_Threshold_10__c)),
AND(NOT(ISNULL(pse__Days_Value_11__c)),ISNULL(pse__Hour_Threshold_11__c)),
AND(NOT(ISNULL(pse__Days_Value_12__c)),ISNULL(pse__Hour_Threshold_12__c)),
AND(NOT(ISNULL(pse__Days_Value_13__c)),ISNULL(pse__Hour_Threshold_13__c)),
AND(NOT(ISNULL(pse__Days_Value_14__c)),ISNULL(pse__Hour_Threshold_14__c)),
AND(NOT(ISNULL(pse__Days_Value_15__c)),ISNULL(pse__Hour_Threshold_15__c)),
AND(NOT(ISNULL(pse__Days_Value_16__c)),ISNULL(pse__Hour_Threshold_16__c)),
AND(NOT(ISNULL(pse__Days_Value_17__c)),ISNULL(pse__Hour_Threshold_17__c)),
AND(NOT(ISNULL(pse__Days_Value_18__c)),ISNULL(pse__Hour_Threshold_18__c)),
AND(NOT(ISNULL(pse__Days_Value_19__c)),ISNULL(pse__Hour_Threshold_19__c)),
AND(NOT(ISNULL(pse__Days_Value_20__c)),ISNULL(pse__Hour_Threshold_20__c))
)</errorConditionFormula>
        <errorMessage>Hour Threshold is required if Days Value is specified.</errorMessage>
    </validationRules>
</CustomObject>